track vm replication
